# IB-24-25

./: README.md
13_11_24-jutge/: P13623_Chess_board2  P15613_Temperature  P17913_DoubleFactorial  P18777_Day_of_the_week  P18777_Day_of_the_week.cc  P19991_Chess_Board3  P21281-MostFrecuentFactor  P21281-MostFrecuentFactor.cc  P24080_Squares1  P24381-PrintCross  P24381-PrintCross.cc  P29448_CorrectDates  P31170_MultiplicationTable  P32954-Sort_3  P32954-Sort_3.cc  P33839_SumDigits  P33839_SumDigits.cc  P34080_Squares2  P34080_Squares2.cc  P34091_PerfectNumbers  P34091_PerfectNumbers.cc  P35080_Squares4  P35080_Squares4.cc  P36668_SumSquares  P37500_FirstNumbers  P37760_Trigonometry  P38045_SguaresrootsSquares  P39057_ComputingAreas  P39359_Squares3  P42042_ClasificationCharacters  P42280-Chess_board1  P52847_Maximun_3_IntegerNumbers  P56118_Maximun_2_Numbers.cc  P57846_Max2Numbers  P57852_Greatest_common_divisor_of_four  P58153_HarmoicalNumbers_2  P58459_ValidDates  P58459_ValidDates.cc  P58653_ClassificationChatacters_2  P59652-ReadRationalNumber_1  (+35 more)
P09-functions2/: README.md  scalar_product.cc
P09-functions2/approximate_root/: CMakeLists.txt  approximate_root.cc
P09-functions2/capitalize_vowels/: CMakeLists.txt  capitalize_vowels.cc
P09-functions2/hypotenuse/: CMakeLists.txt  hypotenuse.cc
P09-functions2/polynomial/: CMakeLists.txt  polynomial.cc
P09-functions2/scalar_product/: CMakeLists.txt  scalar_product.cc
jutgeProblems/: P11725-SequentialSeachArray.cc  P12061_words-between-two-words.cc  P13623_Chess_board2.cc  P14130-EqualLastOne.cc  P15613_Temperature.cc  P17913_DoubleFactorial.cc  P19991_Chess_Board3.cc  P24080_Squares1.cc  P24301-ConcatenationVectors.cc  P27411-Ith2.cc  P29448_CorrectDates.cc  P29973-triangle.cc  P31111_Parentheses.cc  P31170_MultiplicationTable.cc  P33839_SumDigits.cc  P34080_Squares2.cc  P35080_Squares4.cc  P35547-easter-sundays.cc  P35957-Middle-digits.cc  P36430-Fermats-last-theorem.cc  P36668_SumSquares.cc  P37500_FirstNumbers.cc  P37760_Trigonometry.cc  P38045_SguaresrootsSquares.cc  P39057_ComputingAreas.cc  P39225-Ith.cc  P39359_Squares3.cc  P42042_ClasificationCharacters.cc  P42280-Chess_board1.cc  P48713-Primality.cc  P50095-Next-prime-number.cc  P50497-IsPalindrome.cc  P52847_Maximun_3_IntegerNumbers.cc  P57846_Max2Numbers.cc  P57852_Greatest_common_divisor_of_four.cc  P58153_HarmoicalNumbers_2.cc  P58653_ClassificationChatacters_2.cc  P59652-ReadRationalNumber_1.cc  P59875_ToptoBottom.cc  P61061_ProductDigits.cc  (+24 more)
